Changes file for Business::GL::Postalcode

0.02 2014.08.08 - Maintence release, update not necessary

- Added perl requirement to Build.PL

- Added new accessor: num_of_digits_in_postalcode


0.01 2014.08.06 - Initial release

- Implementing the following features:

    - Data container for postalcodes from Greenland (GL)