@@ -1,5 +1,10 @@
 Changes file for Business::GL::Postalcode
 
+HEAD
+
+- Added missing method get_all_cities
+
+
 0.02 2014.08.08 - Maintence release, update not necessary
 
 - Added perl requirement to Build.PL
